# Saturn-ation

./: .gitignore  CMakeLists.txt  Saturn-ation.jucer  readme.md
Builds/LinuxMakefile/: Makefile
Builds/LinuxMakefile/pre_build/: juce_LinuxSubprocessHelperBinaryData.cpp  juce_LinuxSubprocessHelperBinaryData.h
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SaturnKnobLookAndFeel.cpp  SaturnKnobLookAndFeel.h  apvts.cpp
